<resources>
    <string name="app_name">WhatsApp</string>

    <!-- Sign in Activity Layout -->
    <string name="signin_email">Type your e-mail</string>
    <string name="signin_password">Type your password</string>
    <string name="signup_text_call">Don\'t have an account?</string>
    <string name="signup_link">Sign up</string>
    <string name="signin_button">Sign in</string>

    <!-- Sign up Activity Layout -->
    <string name="signup_name">Name</string>
    <string name="signup_email">E-mail</string>
    <string name="signup_password">Password</string>
    <string name="signup_confirm_password">Confirm password</string>
    <string name="signup_button">Sign up</string>

    <!-- Profile Activity Layout -->
    <string name="fill_name_field">Please enter your name</string>
    <string name="update_button">Update</string>

    <!-- Messages Activity Layout -->
    <string name="message_chat">Type your message</string>

    <!-- Menu Layout -->
    <string name="profile_menu_item">Profile</string>
    <string name="signout_menu_item">Sign out</string>
</resources>